@@ -1,3 +1,13 @@
+2011-09-16  Anders Carlsson  <andersca@apple.com>
+
+        Temporarily remove the WKHitTestResultRef parameter to avoid breaking the WK2 ABI/API
+        https://bugs.webkit.org/show_bug.cgi?id=68266
+
+        Reviewed by John Sullivan.
+
+        * MiniBrowser/mac/BrowserWindowController.m:
+        (mouseDidMoveOverElement):
+
 2011-09-16  Vincent Scheib  <scheib@chromium.org>
 
         Add Vincent Scheib to the committers list.
