@@ -1,3 +1,14 @@
+2011-09-16  Anders Carlsson  <andersca@apple.com>
+
+        Temporarily remove the WKHitTestResultRef parameter to avoid breaking the WK2 ABI/API
+        https://bugs.webkit.org/show_bug.cgi?id=68266
+
+        Reviewed by John Sullivan.
+
+        * UIProcess/API/C/WKPage.h:
+        * UIProcess/WebUIClient.cpp:
+        (WebKit::WebUIClient::mouseDidMoveOverElement):
+
 2011-09-16  Filip Pizlo  <fpizlo@apple.com>
 
         DFG JIT should inline Math.abs
